=== HEAD

* Make graphing a complex dataset work correctly (jeremyevans)

* Fix MySQL command out of sync errors, disconnect from database if they occur (jeremyevans)

* In the schema_dumper extension, do a much better job of parsing defaults from the database (jeremyevans)

* On PostgreSQL, assume the public schema if one is not given and there is no default in Database#tables (jeremyevans)

* Ignore a :default value if creating a String :text=>true or File column on MySQL, since it doesn't support defaults on text/blob columns (jeremyevans)

* On PostgreSQL, do not raise an error when attempting to reset the primary key sequence for a table without a primary key (jeremyevans)

* Allow plugins to have a configure method that is called on every attempt to load them (jeremyevans)

* Attempting to load an already loaded plugin no longer calls the plugin's apply method (jeremyevans)

* Make plugin's plugin_opts methods return an array of arguments if multiple arguments were given, instead of just the first argument (jeremyevans)

* Keep track of loaded plugins at Model.plugins, allows plugins to depend on other plugins (jeremyevans)

* Make Dataset#insert on PostgreSQL work with static SQL (jeremyevans)

* Add lazy_attributes plugin, for creating attributes that can be lazily loaded from the database (jeremyevans)

* Add tactical_eager_loading plugin, similar to DataMapper's strategic eager loading (jeremyevans)

* Don't raise an error when loading a plugin with DatasetMethods where none of the methods are public (jeremyevans)

* Add identity_map plugin, for creating temporary thread-local identity maps with some caching (jeremyevans)

* Support savepoints when using MySQL (jeremyevans)

* Add -C option to bin/sequel that copies one database to another (jeremyevans)

* In the schema_dumper extension, don't include defaults that contain literal strings unless the DBs are the same (jeremyevans)
